# rofi-nix-run

./: CMakeLists.txt  LICENSE  flake.nix
src/: constants.h  indexer.c  indexer.h  nix-run.c
